# Pyramid-Sparse-Attention

./: README.md  README_zh.md  pyproject.toml  setup.py
configs/: README.md  README_zh.md  attention_config.yaml
examples/: README.md  README_zh.md
examples/configs/: model_configs.py
examples/inference/cogvideo/: cogvideo_5b.py
examples/inference/wan21/: wan21_1.3b.py  wan21_14b.py
examples/inference/wan22/: wan22_5b.py  wan22_a14b.py
qwen2.5-vl-example/: README.md  README_CN.md
qwen2.5-vl-example/src/: inference.py
qwen2.5-vl-example/src/attention/: qwen2vl_attention.py
qwen2.5-vl-example/src/attention/PSA_casual/: PyramidAdaptiveBlockSparseAttn.py
qwen2.5-vl-example/src/attention/PSA_casual/kernels/: __init__.py  block_importance_kernels.py  psa_kernel_causal.py
qwen2.5-vl-example/src/attention/PSA_casual/utils/: block_importance.py  psa_logger.py  timer.py  tools.py
qwenvl2.5-example/: README.md
qwenvl2.5-example/src/: __init__.py
qwenvl2.5-example/src/attention/: __init__.py
qwenvl2.5-example/src/attention/PSA_casual/: PyramidAdaptiveBlockSparseAttn.py  __init__.py
src/psa_triton/: README.md  README_zh.md  attention.py  pyramid_sparse_attention.py
src/psa_triton/kernels/: __init__.py  attn_pooling_kernel.py  block_sparse_attn_kernel_with_backward_9_10.py  calc_ksim_kernel.py  psa_kernel.py  psa_kernel_legacy.py  psa_kernel_opt.py
src/psa_triton/utils/: transfer_attn_to_mask.py
tests/: test_attention.py
