[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psa-triton"
version = "0.1.0"
description = "Training-free inference acceleration for video generation models using Pyramid Sparse Attention"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "PSA Team", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "torch>=2.1.0",
    "triton>=3.2.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",

    # Data manipulation
    "numpy>=1.24.0,<2.0",
    "einops>=0.6.0",
    "pyyaml>=6.0",

    # Imaging and video
    "Pillow>=9.0.0",
    "opencv-python>=4.8.0",

    # HuggingFace ecosystem
    "huggingface-hub>=0.20.0",
    "hf-transfer>=0.1.4",
    "safetensors>=0.4.0",
    "accelerate>=0.25.0",

    # Utilities
    "filelock>=3.0.0",
    "requests>=2.31.0",
    "regex>=2023.0.0",
    "tqdm>=4.65.0",
    "ftfy>=6.1.0",

    # Deep learning utilities
    "timm>=0.9.0",
    "torchvision>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

all = [
    # Additional packages from fastvideo_env
    "kornia>=0.7.0",
    "lpips>=0.1.4",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    "deepspeed>=0.12.0",
    "peft>=0.7.0",
    # GPU-accelerated KMeans (optional, for semantic rearrangement features)
    # Note: cuvs-cu12 requires compatible NVIDIA CUDA libraries
    # "cuvs-cu12>=25.10.0",  # Uncomment if needed
]

[project.urls]
Homepage = "https://github.com/yourusername/PyramidSparseAttention"
Documentation = "https://github.com/yourusername/PyramidSparseAttention"
Repository = "https://github.com/yourusername/PyramidSparseAttention"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["configs/*.yaml"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=psa_triton --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
